# kiana

./: .dockerignore  .env.prod  .gitignore  .pdm-python  .ruff.toml  Dockerfile  LICENSE  README.md  bot.py  pyproject.toml  release.py  start.sh
.github/workflows/: deploy.yaml  docker-publish.yaml  manual-release.yaml
src/plugins/anime_trace/: __init__.py
src/plugins/daily_report/: __init__.py  config.py  data_source.py
src/plugins/daily_report/daily_report/: main.css  main.html
src/plugins/doubili/: __init__.py  bilibili.py  config.py  douyin.py  xiaohongshu.py
src/plugins/fund/: __init__.py  fund_parser.py
src/plugins/gold/: __init__.py  config.py
src/plugins/nonebot_anime_trace/: __init__.py
src/plugins/nonebot_character_trace/: __init__.py  config.py  status_code_handler.py
src/plugins/nonebot_plugin_resolver2/: __init__.py  config.py
src/plugins/nonebot_plugin_resolver2/matchers/: __init__.py  bilibili.py  douyin.py
src/plugins/nonebot_plugin_resolver2/parsers/: __init__.py
src/plugins/un_nickname/: __init__.py  config.py
src/storage/: __init__.py  sqlite_manager.py
