[project]
name = "kiana"
version = "0.1.0"
description = "kiana"
readme = "README.md"
requires-python = ">=3.8, <4.0"
dependencies = [
    "nonebot-adapter-onebot>=2.4.3",
    "nonebot2[fastapi]>=2.2.1",
    "nonebot2[httpx]>=2.2.1",
    "nonebot2[websockets]>=2.2.1",
    "imageio>=2.35.1",
    "pillow>=10.4.0",
    "requests>=2.32.3",
    "langid>=1.1.6",
    "httpx>=0.27.2",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []
