[project]
name = "kiana"
version = "0.1.0"
description = "kiana"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nonebot-adapter-onebot>=2.4.3",
    "nonebot2[fastapi]>=2.2.1",
    "nonebot2[httpx]>=2.2.1",
    "nonebot2[websockets]>=2.2.1",
    "imageio>=2.35.1",
    "pillow>=10.0.0",
    "requests>=2.32.3",
    "langid>=1.1.6",
    "httpx>=0.27.2",
    "nonebot-plugin-alconna>=0.53.1",
    "nonebot-plugin-htmlrender>=0.4.0",
    "zhdate>=0.1",
    "nonebot-plugin-localstore>=0.7.1",
    "tenacity>=9.0.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-uninfo>=0.5.0",
    "pydantic-core>=2.27.0",
    "numpy>=1.20.0,<2.0.0",
    "nonebot-plugin-withdraw>=0.4.0",
    "nonebot-plugin-orm[default]>=0.7.6",
    "nonebot-plugin-memes>=0.7.11",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_memes", "nonebot_plugin_withdraw"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
