[project]
name = "kiana"
version = "0.4.3"
description = "kiana"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "nonebot-adapter-onebot>=2.4.3",
    "nonebot2[fastapi]>=2.2.1",
    "nonebot2[httpx]>=2.2.1",
    "nonebot2[websockets]>=2.2.1",
    "langid>=1.1.6",
    "httpx>=0.27.2",
    "nonebot-plugin-alconna>=0.53.1",
    "nonebot-plugin-localstore>=0.7.1",
    "nonebot-plugin-apscheduler>=0.5.0",
    "pydantic-core>=2.27.0",
    "nonebot-plugin-withdraw>=0.4.0",
    "matplotlib>=3.10.1",
    "numpy>=2.3.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_withdraw"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[dependency-groups]
dev = ["ruff>=0.11.7"]
